Adding CRUD operations and UI changes for Banking application
